# Rubicon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_python_proto.sh
computeUnit/: ComputeUnit.cpp
computeUnit/include/factories/: AbstractOperatorFactory.hpp  AggregateFactory.hpp  DataTransferFactory.hpp  FetchDataFactory.hpp  FilterFactory.hpp  GroupFactory.hpp  JoinFactory.hpp  MapFactory.hpp  MaterializeFactory.hpp  ResultFactory.hpp  SetOperatorFactory.hpp  SortFactory.hpp  TestDataFactory.hpp
computeUnit/include/infrastructure/: Column.hpp  DataCatalog.hpp  DataReader.hpp  Logger.hpp  OperatorDispatcher.hpp  PlanOrchestrator.hpp  SupportedOperators.hpp  TCPClient.hpp  Utility.hpp  WorkerPool.hpp
computeUnit/include/operators/: AbstractOperator.hpp  AggregateOperator.hpp  DataTransferOperator.hpp  FetchDataOperator.hpp  FilterOperator.hpp  GroupOperator.hpp  HashJoinOperator.hpp  IdxScanOperator.hpp  MapColumnsOperator.hpp  MapScalarOperator.hpp  MaterializeOperator.hpp  MergeJoinOperator.hpp  NestedLoopJoinOperator.hpp  ResultOperator.hpp  SetIntersectOperator.hpp  SetUnionOperator.hpp  SortOperator.hpp  TestDataOperator.hpp
computeUnit/src/factories/: AbstractOperatorFactory.cpp  AggregateFactory.cpp  DataTransferFactory.cpp  FetchDataFactory.cpp  FilterFactory.cpp  GroupFactory.cpp  JoinFactory.cpp  MapFactory.cpp  MaterializeFactory.cpp  ResultFactory.cpp  SetOperatorFactory.cpp  SortFactory.cpp  TestDataFactory.cpp
computeUnit/src/infrastructure/: ArgParser.cpp  DataCatalog.cpp  Logger.cpp  OperatorDispatcher.cpp  PlanOrchestrator.cpp  SupportedOperators.cpp  TCPClient.cpp  Utility.cpp  WorkerPool.cpp
computeUnit/src/operators/: AggregateOperator.cpp  DataTransferOperator.cpp  FetchDataOperator.cpp  FilterOperator.cpp  GroupOperator.cpp  HashJoinOperator.cpp  IdxScanOperator.cpp  MapColumnsOperator.cpp  MapScalarOperator.cpp  MaterializeOperator.cpp  MergeJoinOperator.cpp  NestedLoopJoinOperator.cpp  ResultOperator.cpp  SetIntersectOperator.cpp  SetUnionOperator.cpp  SortOperator.cpp  TestDataOperator.cpp
data/: convert_to_binary.py  pyproject.toml  schema.txt  setup.sh
experiments/: concurrent_query_execution_experiment.py  grouping_overhead_experiment.py  pyproject.toml  workload_experiment.py
experiments/configs/: workload_adhoc_exploration.yaml  workload_microbursts.yaml  workload_morning_dashboard.yaml  workload_peak_mixed.yaml  workload_stress_test.yaml
experiments/utils/: arrival.py  client.py  msg.py  queries.py  query_result.py  unique_id.py  util.py  workload_config.py  workload_executor.py
grouper/: Grouper.cpp
grouper/include/: Analysis.hpp  ArgParser.hpp  ColumnSizes.hpp  DAGCollection.hpp  DAGCollectionManager.hpp  Logger.hpp  PlanDAG.hpp  TCPCommon.hpp  TCPServer.hpp  TransferAnalysis.hpp  UniqueRandomU64.hpp  Utility.hpp
grouper/src/: ArgParser.cpp  DAGCollection.cpp  DAGCollectionManager.cpp  TCPServer.cpp  TransferAnalysis.cpp  Utility.cpp
pg_potential_experiment/: pg_potential_bench.cpp
proto/: ConfigurationRequests.proto  NetworkRequests.proto  QueryPlan.proto  TestAndBenchmark.proto  UnitDefinition.proto  WorkItem.proto  WorkRequest.proto  WorkResponse.proto
